examples/minimal/undefined/UB-CEE1-bad.output
Error: UB-CEE1
Description: Address of an array declared with register storage class used in an expression.
Type: Undefined behavior.
See also: C11 sec. 6.3.2.1:3, J.2:1 item 22
  at main(UB-CEE1-bad.c:3)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
