examples/minimal/undefined/UB-CEE1-bad.c
int main(void){
	register int a[10] = {};
	a[5];
	return 0;
}
